# sous-chef

./: .gitignore  README.md  WHY_SQLSOURCE.md  feature_store.yaml  pyproject.toml
examples/: README.md  convert_to_parquet.py  simple_example.py
examples/config/: feature_store.yaml  features.yaml
examples/customer_analytics_demo/: README.md  customer_metrics.py
examples/customer_analytics_demo/data/: customer_data.parquet  online_store.db  registry.db
examples/customer_analytics_demo/feature_repo/: feature_store.yaml  features.yaml
examples/data/: customer_data.csv  customer_data.parquet
examples/retail_feature_store/: README.md  retail_analytics.py
examples/retail_feature_store/data/: online_store.db  registry.db  retail_data.parquet
examples/retail_feature_store/feature_repo/: feature_store.yaml  features.yaml
src/sous_chef/: __init__.py  errors.py  registry.py  sous_chef.py  sql_sources.py  validators.py
src/sous_chef/config/: metadata_rules.yaml
tests/: conftest.py  test_feature_services.py  test_registry.py  test_snowflake_sources.py  test_sous_chef.py  test_spark_emr_sources.py  test_sql_sources.py  test_teradata_sources.py  test_validators.py
tests/fixtures/config/: dummy_config.yaml  feast_config.yaml  metadata_rules.yaml  source_configs.yaml  test_config.yaml
tests/fixtures/features/: complex_features.yaml  driver_stats.yaml
tests/fixtures/test_data/: descriptions.yaml
